manifests/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: neva-friends
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-webapi
  namespace: neva-friends
  labels:
    app: chat-webapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-webapi
  template:
    metadata:
      labels:
        app: chat-webapi
    spec:
      containers:
        - name: chat-webapi
          image: cr.yandex/crp0ua90hrat22e231l5/chat-webapi:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 11000
              name: http
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: chat-webapi
  namespace: neva-friends
  labels:
    app: chat-webapi
spec:
  type: ClusterIP
  ports:
    - port: 11000
      targetPort: 11000
      name: http
      protocol: TCP
  selector:
    app: chat-webapi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chat-webapi
  namespace: neva-friends
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - chat.greenspacegg.ru
      secretName: chat-webapi-tls
  rules:
    - host: chat.greenspacegg.ru
      http:
        paths:
          - path: /swagger
            pathType: Prefix
            backend:
              service:
                name: chat-webapi
                port:
                  number: 11000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chat-webapi
                port:
                  number: 11000
